<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtExperimentGroup"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/editTextMarginVertical"
        android:layout_marginEnd="@dimen/itemSpaceHorizontal"
        android:layout_marginStart="@dimen/itemSpaceHorizontal"
        android:layout_marginTop="@dimen/editTextMarginVertical"
        app:errorEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_experiment_group"
            android:inputType="text"
            android:textSize="@dimen/txtSizeTitle" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtSurveyLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/edtExperimentGroup"
        android:layout_toStartOf="@id/btnSurveyPreview"
        android:layout_marginBottom="@dimen/editTextMarginVertical"
        android:layout_marginEnd="@dimen/itemSpaceHorizontal"
        android:layout_marginStart="@dimen/itemSpaceHorizontal"
        android:layout_marginTop="@dimen/editTextMarginVertical"
        app:errorEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_survey_link"
            android:inputType="textUri"
            android:textSize="@dimen/txtSizeTitle" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/btnSurveyPreview"
        android:layout_alignEnd="@id/edtExperimentGroup"
        android:layout_centerVertical="true"
        android:layout_below="@id/edtExperimentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/baseline_visibility_white_24"
        android:padding="4dp"
        android:layout_alignTop="@id/edtSurveyLink"
        android:gravity="center_horizontal|center_vertical"
        android:scaleType="fitCenter"
        android:text="@string/btn_survey_preview"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txtSizeSmallText"
        android:theme="@style/AppTheme" />

</RelativeLayout>

