<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/containerPaddingVertical"
        android:transitionGroup="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/itemSpaceVertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/editTextMarginVertical"
                android:layout_marginEnd="@dimen/itemSpaceHorizontal"
                android:layout_marginStart="@dimen/itemSpaceHorizontal"
                android:layout_marginTop="@dimen/editTextMarginVertical"
                android:transitionGroup="true"
                app:errorEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/label_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/txtSizeTitle" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/editTextMarginVertical"
                android:layout_marginEnd="@dimen/itemSpaceHorizontal"
                android:layout_marginStart="@dimen/itemSpaceHorizontal"
                android:layout_marginTop="@dimen/editTextMarginVertical"
                android:transitionGroup="true"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_new_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/txtSizeTitle" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btnSpaceBottom"
            android:layout_marginEnd="@dimen/itemSpaceHorizontal"
            android:layout_marginStart="@dimen/itemSpaceHorizontal"
            android:layout_marginTop="@dimen/btnSpaceTop"
            android:background="@color/colorButton"
            android:scaleType="fitCenter"
            android:text="@string/btn_change_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txtSizeTitle"
            android:theme="@style/AppTheme"
            app:spinning_bar_color="@android:color/white"
            app:spinning_bar_padding="@dimen/circularBarPadding" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>

