<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/itemSpaceHorizontal"
            android:paddingEnd="@dimen/itemSpaceHorizontal"
            android:gravity="center"
            android:textSize="@dimen/txtSizeMessage" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/itemSpaceVertical">

                <kaist.iclab.abc.foreground.view.ExperimentItemView
                    android:id="@+id/itemExperimentView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/lazyContainer"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <kaist.iclab.abc.foreground.view.SectionItemView
                            android:id="@+id/sectionExperimentDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:headerText="@string/label_experiment_description"
                            app:showBottomSpace="true" />

                        <kaist.iclab.abc.foreground.view.SectionItemView
                            android:id="@+id/sectionDataRequires"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:headerText="@string/label_data_required"
                            app:showBottomSpace="false"/>

                        <kaist.iclab.abc.foreground.view.SectionItemView
                            android:id="@+id/sectionExperimentContact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:headerText="@string/label_experiment_contact"
                            app:showBottomSpace="true" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabParticipate"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/itemSpaceHorizontal"
            android:src="@drawable/baseline_group_add_white_48"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>
